Revert 3d party publishing logic