@@ -1,5 +1,3 @@
-import com.android.build.api.dsl.LibraryPublishing
-
 plugins {
     alias(libs.plugins.androidApplication) apply false
     alias(libs.plugins.jetbrainsKotlinAndroid) apply false
@@ -11,47 +9,4 @@ buildscript {
         google()
         mavenCentral()
     }
-}
-
-allprojects {
-    val kotlinLint by configurations.creating
-
-    dependencies {
-        kotlinLint("com.pinterest.ktlint:ktlint-cli:1.2.1") {
-            attributes {
-                attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
-            }
-        }
-    }
-
-    tasks.register<JavaExec>("ktlint") {
-        description = "Check Kotlin code style."
-        mainClass.set("com.pinterest.ktlint.Main")
-        classpath = kotlinLint
-        args("src/**/*.kt")
-        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-    }
-
-    tasks.register<JavaExec>("ktlintFormat") {
-        group = "formatting"
-        description = "Fix Kotlin code style deviations."
-        mainClass.set("com.pinterest.ktlint.Main")
-        classpath = kotlinLint
-        args("-F", "src/**/*.kt")
-        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-    }
-}
-
-subprojects {
-    if (plugins.hasPlugin("com.android.library")) {
-        configure<LibraryPublishing> {
-            singleVariant("release") {
-                withSourcesJar()
-            }
-        }
-    }
-}
-
-tasks.create<Delete>("clean") {
-    delete(rootProject.layout.buildDirectory)
 }
